# minimind-o

./: .gitignore  README.md  README_en.md  eval_omni.py  pyproject.toml
scripts/: web_demo_omni.py
trainer/: train.ps1  train_sft_omni.py  trainer_utils.py
webui/: web_demo.py
