[project]
name = "minimind-o"
version = "0.1.0"
description = "MiniMind-O: Train a Tiny Omni Model from Scratch."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "flask-sock==0.7.0",
    "funasr==1.3.1",
    "gradio>=5.0.0",
    "librosa==0.11.0",
    "onnxruntime==1.23.2",
    "pydub>=0.25.1",
    "pyarrow==23.0.1",
    "snac==1.2.1",
    "soundfile==0.13.1",
    "speechbrain==1.1.0",
    "swanlab==0.7.11",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchvision==0.25.0",
    "transformers==4.57.6",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
